# winmo_bubbles

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  Doxyfile  Doxyfile.in  TODO.txt  appveyor.yml  bitbucket-pipelines.yml  readme.md  settings.cxx  settings.hxx  version.cmake  winmo_bubbles
android-project/: CMakeLists.txt
data/: CMakeLists.txt
data/config/: settings.ini
data/sounds/: 00_falling  02_destroy_big_form  04_level_uneven  05_level_2____  06_level_3  08_flip  09_cant_flip
data/vertex_buffers/: vert_buffer_for_progress_desk.txt  vert_buffers_for_full_monitor.txt  vert_buffers_for_gems.txt  vert_tex_color.txt
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
engine/: CMakeLists.txt  ani2d.cxx  color.cxx  color.hxx  engine.cxx  engine.hxx  ini_handler.cxx  ini_handler.hxx  math_structures.cxx  random_generator.cxx  sound_buffer.cxx  texture.cxx  texture.hxx  txt_loader.hxx
engine/include/: engine.hxx  sound_buffer.hxx
game/: CMakeLists.txt  game.cxx  game.h  game.hxx  global_variables.cxx  global_variables.hxx  main.cxx
game/components/: block.cxx  block.hxx  counter.cxx  counter.hxx  field.cxx  field.hxx  number.cxx  number.hxx  progress_desk.cxx  progress_desk.hxx
game/states/: classic_state.cxx  classic_state.hxx  extreme_state.cxx  extreme_state.hxx  game_over_state.cxx  game_over_state.hxx  level_complete_state.cxx  level_complete_state.hxx  select_mode_state.cxx  select_mode_state.hxx
installer/: CMakeLists.txt  Features.wxi  Product.wxi  Product.wxs  Variables.wxi
installer/templates/: Variables.wxi.in
installer_unix/: CMakeLists.txt  CPackConfig.cmake
installer_win/: CMakeLists.txt  Features.wxi  License.rtf  Product.wxi  Product.wxs  RemoveConfigsFromHeatOutput.xsl  Variables.wxi
libs/SDL2-2.0.8/: CMakeLists.txt
src/SDL2/: SDL_config.h
src/engine/: ani2d.cxx  ani2d.hxx  color.cxx  color.hxx  engine.cxx  engine.hxx  file_handler.cxx  file_handler.hxx  file_handler_impl.cxx  file_handler_impl.hxx  font.cxx  font.hxx  game_state.cxx  game_state.hxx  ini_handler.cxx  ini_handler.hxx  math_structures.cxx  math_structures.hxx  membuf.hxx  random_generator.cxx  random_generator.hxx  sound_buffer.cxx  sound_buffer.hxx  text_item.cxx  text_item.hxx  texture.cxx  texture.hxx  txt_loader.hxx  vertex_buffer.hxx
src/game/: block.cxx  block.cxx.autosave  block.hxx  classic_state.cxx  classic_state.hxx  counter.cxx  counter.hxx  extreme_state.cxx  extreme_state.hxx  field.cxx  field.hxx  game_over_state.cxx  game_over_state.hxx  global_variables.cxx  global_variables.hxx  level_complete_state.cxx  level_complete_state.hxx  level_complite_state.cxx  level_complite_state.hxx  main.cxx  number.cxx  number.hxx  progress_desk.cxx  progress_desk.hxx  select_mode_state.cxx  select_mode_state.hxx  settings.cxx  settings.hxx
src/game/components/: block.cxx  block.hxx  counter.cxx  counter.hxx  field.cxx  field.hxx  number.cxx  number.hxx  progress_desk.cxx  progress_desk.hxx
src/game/states/: classic_state.cxx  classic_state.hxx  extreme_state.cxx  extreme_state.hxx  game_over_state.cxx  game_over_state.hxx  level_complete_state.cxx  level_complete_state.hxx  select_mode_state.cxx  select_mode_state.hxx
utils/: CMakeLists.txt  file_operations.cxx  file_operations.hxx  ini_handler.cxx  utils-config.cmake.in  utils-config_new.cmake.in
utils/include/: ini_handler.hxx
version/: CMakeLists.txt  version.cmake  version.txt
