cmake_minimum_required(VERSION 3.16)

# file(COPY ${CMAKE_SOURCE_DIR}/thirdparty/win/opengl32.dll DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
# add_dependencies(netdrv manual changelog)
# install(FILES "$<TARGET_PROPERTY:manual,OUTPUT_NAME>" DESTINATION doc COMPONENT MANUAL_DOC)
# install(TARGETS ${PROJECT_NAME}
#     LIBRARY DESTINATION lib${PACKAGE_LIBRARY_SUFFIX} COMPONENT DIP
#     ARCHIVE DESTINATION lib${PACKAGE_LIBRARY_SUFFIX} COMPONENT DIP
# )
# file(GLOB ecatdip_LIBRARIES "${CMAKE_CURRENT_LIST_DIR}/../lib/*.so")

